Jump Start Changelog
====================

2.1.14 - XX/XX/XXXX
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.

--------------------------------------------------------------

2.1.13 - 09/19/2017
-------------------

* **Updated Theme Blvd framework to 2.6.12**
* Fixed: TinyMCE toolbar's dropdown menus not showing when the using Visual Editor within Theme Blvd Layout Builder.

--------------------------------------------------------------

2.1.12 - 09/11/2017
-------------------

* **Updated Theme Blvd framework to 2.6.11**
* Improvement: Sticky menu is now at 0 opacity when it's hidden for protection against systems that allow temporary scrolling past the viewport top.
* Fixed: Sticky menu and scroll effects not working in Chrome v61.
* Fixed: PHP warning from media.php, "A non-numeric value encountered."

--------------------------------------------------------------

2.1.11 - 08/07/2017
-------------------

* **Updated Theme Blvd framework to 2.6.10**
* Fixed: "Iframe" 16:9 lightbox type getting applied where it shouldn't.

--------------------------------------------------------------

2.1.10 - 08/03/2017
-------------------

* **Updated Theme Blvd framework to 2.6.9**
* Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
* Fixed: Minor admin styling issues with WordPress 4.8+.
* Fixed: Minor broken image links in CSS for Executive and Superuser bases.
* Fixed: Ajax errors in some combinations of third-party plugins, WooCommerce, and the theme.
* Fixed: Deprecated notices in theme's "catalog view" display for WooCommerce products.

--------------------------------------------------------------

2.1.9 - 05/31/2017
------------------

* **Updated Theme Blvd framework to 2.6.8**